# miden-battleship

./: .gitignore  ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  README.md  store.sqlite3
.claude/: settings.json
.github/workflows/: deploy-pages.yml
frontend-template/: index.html  package.json  vite.config.ts
frontend-template/.claude/: settings.json
frontend-template/src/: App.tsx  config.ts  index.css  main.tsx  providers.tsx
frontend-template/src/components/: AppContent.css  AppContent.tsx  Cell.css  Cell.tsx  GameBoard.css  GameBoard.tsx  GamePlay.css  GamePlay.tsx  GameStatus.css  GameStatus.tsx  LobbyScreen.css  LobbyScreen.tsx  ShipPlacement.css  ShipPlacement.tsx  WaitingScreen.css  WaitingScreen.tsx  WalletButton.css  WalletButton.tsx
frontend-template/src/hooks/: useAutoSync.ts  useBoardState.ts  useFireShot.ts  useGameState.ts  (+4 more)
frontend-template/tasks/: webclient-bug-report.md
keystore/: 1933940502294927743  3271694370547406772  675846143890006986  7535375355741433667  9747085658099196799  9893764220629220991
local-accounts/: faucet_miden.mac
project-template/: local-store-alice.sqlite3  local-store-bob.sqlite3
project-template/contracts/accept-note/: Cargo.toml
project-template/contracts/accept-note/src/: lib.rs
project-template/integration/: Cargo.toml
project-template/local-accounts/: faucet_miden.mac
project-template/local-keystore-bob/: 1967165656888751836
project-template/local-keystore-default/: 434663177040488666  9514957948130930003
repro/: Cargo.toml  README.md
repro/src/: lib.rs
tasks/: lessons.md  todo.md
(+35 files in other folders)
