[package]
name = "repro-compiler-bug"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
miden = { version = "0.12" }

[package.metadata.component]
package = "miden:repro-compiler-bug"

[package.metadata.miden]
project-kind = "account"
supported-types = ["RegularAccountImmutableCode"]
