[package]
name = "accept-note"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
miden = { version = "0.12" }

[package.metadata.component]
package = "miden:accept-note"

[package.metadata.miden.dependencies]
"miden:battleship-account" = { path = "../battleship-account" }

[package.metadata.component.target.dependencies]
"miden:battleship-account" = { path = "../battleship-account/target/generated-wit/" }

[package.metadata.miden]
project-kind = "note-script"
